# QtDemo

./: .gitignore  README.md
ChatApp/: CMakeLists.txt  UiMain.cpp  UiMain.h  main.cpp
Demo5.15/: CMakeLists.txt  Demo_en.ts  MainWindow.cpp  MainWindow.h  MainWindow.ui  README.md  main.cpp  resources.qrc
Demo5.15/vscode/: settings.json
Demo6.5/: CMakeLists.txt  Demo_en.ts  Demo_fr.ts  MainWindow.cpp  MainWindow.h  MainWindow.ui  README.md  main.cpp
NetworkReq/: CMakeLists.txt
NetworkReq/main/: CMakeLists.txt  main.cpp
NetworkReq/ui/: CMakeLists.txt
NetworkReq/ui/inc/: NetworkReqUi.h
NetworkReq/ui/src/: NetworkReqUi.cpp
NoBorderAndShadow/: CMakeLists.txt  README.md  UiMain.cpp  UiMain.h  main.cpp
NoBorderAndShadow/assets/: 窗口移动原理.drawio
QNetworkReq/: CMakeLists.txt  QNetworkReq_zh_CN.ts  main.cpp  widget.cpp  widget.h  widget.ui
